# biphy

./: .cproject  .gitignore  .project  CMakeLists.txt  INSTALL  README.md  build.sh
revbayes/: CMakeLists.txt
revbayes/core/analysis/: Model.cpp
revbayes/core/analysis/mcmc/: Mcmc.cpp  Mcmc.h  ParallelMcmcmc.cpp  ParallelMcmcmc.h
revbayes/core/dag/: ConstantNode.h  DagNode.h  TypedDagNode.h
revbayes/core/dag/DeterministicNodes/: DeterministicNode.h
revbayes/core/dag/StochasticNodes/: ContinuousStochasticNode.cpp  ContinuousStochasticNode.h  StochasticNode.h
revbayes/core/datatypes/: Cloneable.h  RbVector.h
revbayes/core/datatypes/math/: MatrixReal.cpp
revbayes/core/datatypes/phylogenetics/: BinaryCharacterData.cpp  BinaryCharacterData.h  BinaryTaxonData.cpp  BinaryTaxonData.h  ContinuousBinaryCharacterData.h  DiscreteCharacterData.h  DiscreteTaxonData.h
revbayes/core/datatypes/trees/: BranchLengthTree.cpp  BranchLengthTree.h  Clade.h  TimeTree.cpp  TimeTree.h  Topology.cpp  Topology.h  TopologyNode.cpp  TopologyNode.h  Tree.cpp  Tree.h  TreeChangeEventHandler.cpp  TreeChangeEventHandler.h  TreeChangeEventListener.h
revbayes/core/distributions/: Distribution.cpp  MixtureDistribution.h  TypedDistribution.h
revbayes/core/distributions/characterhistory/: AbstractTreeHistoryCtmc.h  GeneralTreeHistoryCtmc.h
revbayes/core/distributions/math/: BetaDistribution.cpp  BetaDistribution.h  DirichletDistribution.cpp  ExponentialDistribution.cpp  GammaDistribution.cpp  GammaDistribution.h  NormalDistribution.cpp  PoissonDistribution.cpp  PoissonDistribution.h  UniformDistribution.cpp  UniformDistribution.h
revbayes/core/functions/: Function.cpp  VectorFunction.h  VectorIndexOperator.h
revbayes/core/functions/builtin/: EntropyFunction.cpp  NormalizeVectorFunction.cpp  NormalizeVectorFunction.h  SumFunction.h
revbayes/core/functions/continuous/: ContinuousFunction.cpp  ContinuousFunction.h  LogitFunction.h
revbayes/core/functions/discrete/: ConstantFunction.h
revbayes/core/functions/distribution/: DiscreteBetaValuesFunction.cpp  DiscreteBetaValuesFunction.h  QuantileFunction.cpp  QuantileFunction.h
revbayes/core/functions/phylogenetics/: FreeBinaryRateMatrixFunction.cpp  FreeBinaryRateMatrixFunction.h  TreeAssemblyFunction.cpp
revbayes/core/io/: BinaryCharacterDataReader.cpp  BinaryCharacterDataReader.h  FastaWriter.cpp  FastaWriter.h  NclReader.cpp  NclReader.h  NewickConverter.cpp  NewickConverter.h  NewickTreeReader.cpp  NewickTreeReader.h  TimeAtlasDataReader.h
revbayes/core/math/: MathCombinatorialFunctions.cpp  MathCombinatorialFunctions.h  MathFunctions.cpp  MathFunctions.h  MathHelper.cpp  MathHelper.h  MathLogic.cpp  MathLogic.h  MathVector.cpp  RandomNumberGenerator.cpp  RandomNumberGenerator.h  RbMathCombinatorialFunctions.cpp  RbMathCombinatorialFunctions.h  RbMathFunctions.cpp  RbMathFunctions.h  RbMathLogic.cpp  RbMathLogic.h  RbStatisticsHelper.h  StatisticsHelper.cpp
revbayes/core/math/distributions/: DistributionBeta.cpp  DistributionBeta.h  DistributionBinomial.cpp  DistributionBinomial.h  DistributionDirichlet.h  DistributionGamma.cpp  DistributionGamma.h  DistributionInverseGamma.cpp  DistributionNegativeBinomial.cpp  DistributionNormal.cpp  (+3 more)
revbayes/core/monitors/: FileMonitor.cpp  Monitor.cpp
revbayes/core/moves/: AbstractMove.cpp  AbstractMove.h  Move.cpp  MoveSchedule.cpp  SequenctialMoveSchedule.cpp  SingleRandomMoveSchedule.cpp  SingleRandomMoveSchedule.h
revbayes/core/ncl/: nxsmultiformat.cpp
revbayes/core/utils/: Exception.cpp  RbConstants.h  RbOptions.h  RbUtil.cpp  RbUtil.h  Settings.cpp  TreeUtilities.cpp  TreeUtilities.h  Utilities.cpp  Utilities.h  numerics.h
src/: AbstractBranchHeterogeneousModel.h  AbstractCharEvoModel.h  AbstractDolloSiteHomogeneousMixtureCharEvoModel.h  AbstractSiteCorrectionModel.h  AbstractSiteHomogeneousMixtureModel.h  BinaryCharEvoModel.h  BinaryDolloBranchHeterogeneousCharEvoModel.h  BinaryDolloCompatibleMonitor.h  BinaryDolloSubstitutionModel.cpp  BinaryDolloSubstitutionModel.h  BinaryMissingCharEvoModel.h  BinaryPartitionModel.h  BinarySubstitutionModel.cpp  BinarySubstitutionModel.h  Biphy.cpp  Biphy.h  BiphyFreeTopology.cpp  BiphyFreeTopology.h  BranchHeterogeneousBinaryModel.cpp  BranchHeterogeneousBinaryModel.h  CMakeLists.txt  CladeReader.cpp  CladeReader.h  CrossValidationScoreMonitor.cpp  CrossValidationScoreMonitor.h  DPPBetaSimplexMove.cpp  DPPBetaSimplexMove.h  DolloBinaryCharEvoModel.h  DolloBinaryMissingCharEvoModel.h  DolloBinaryPartitionModel.h  DolloBirthRateGibbsMove.h  DolloBranchHeterogeneousCharEvoModel.h  FreeBinaryRateMatrixVectorFunction.cpp  FreeBinaryRateMatrixVectorFunction.h  GeneralCharEvoModel.h  GibbsMove.h  LnCorrectionFunction.cpp  LnCorrectionFunction.h  MappingMonitor.h  ModelStreamMonitor.cpp  (+44 more)
src/core/analysis/: Model.h
src/core/dag/: DagNode.cpp  DynamicNode.h
src/core/datatypes/: Cloner.h
src/core/distributions/: Distribution.h  TruncatedDistributionUnnormalized.cpp  TypedDistribution.h  UniformTopologyDistribution.cpp  UniformTopologyDistribution.h
src/core/functions/: Function.h  TypedFunction.h  VectorFunction.h
src/core/io/: BinaryCharacterDataReader.cpp  DelimitedDataReader.cpp  DelimitedDataReader.h  NewickConverter.h
src/core/math/: MathFunctions.cpp  MathVector.h  RandomNumberFactory.cpp  RandomNumberFactory.h  StatisticsHelper.h
src/core/monitors/: FileMonitor.h  MappingMonitor.cpp  Monitor.h  NewickTreeMonitor.cpp  NexusTreeMonitor.cpp  NexusTreeMonitor.h  PosteriorPredictiveCountDistributionMonitor.h  PosteriorPredictiveStateFrequencyMonitor.h  ScreenMonitor.cpp  ScreenMonitor.h
src/core/moves/: Move.h  MoveSchedule.h  MultiMove.cpp  PartialVectorScaleMove.cpp  PartialVectorScaleMove.h  Proposal.h  RandomMoveSchedule.cpp  RandomMoveSchedule.h  SequenctialMoveSchedule.cpp  SequenctialMoveSchedule.h  TreePoposal.h  VectorScaleMove.cpp  VectorScaleMove.h
src/core/utils/: Constants.h  Exception.h  FileManager.cpp  FileManager.h  Options.h  Settings.h  StringUtilities.cpp  StringUtilities.h  TreeUtilities.h  Utilities.h  numerics.h
(+79 files in other folders)
